--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1182,6 +1182,31 @@ h2{
     border-color: var(--dark);
 }
 
+.incart-main{
+    background: black;
+    border-radius: 12px;
+    border: 3px solid var(--light);
+    padding: 20px;
+    margin: 1vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: fit-content;
+    cursor: pointer;
+}
+
+.cart-img-holder{
+    width: 300px;
+    height: 160px;
+    overflow: hidden;
+}
+
+.bin-button{
+    outline: none;
+    border: none;
+    background-color: var(--black);
+}
+
 .contain p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #969086;
@@ -1367,6 +1392,10 @@ h2{
     justify-content: space-between;
 }
 
+.buy{
+    justify-content: center;
+}
+
 .paybut{
     background: var(--light);
     border-radius: 12px;
@@ -1374,15 +1403,12 @@ h2{
     padding: 1vh 10vw;
     margin: 3vh auto 0 auto;
     cursor: pointer;
+    color: var(--white);
+    font-size: 16pt;
 }
 
 .paybut:hover{
     background: var(--dark);
-}
-
-.paybut p{
-    text-align: center;
-    font-size: 30pt;
 }
 
 .discount{
@@ -1535,6 +1561,31 @@ h2{
     color: green;
 }
 
+.add-product-form{
+    width: fit-content;
+    height: fit-content;
+    margin: 5vh auto;
+    border: 3px solid var(--light);
+    border-radius: 12px;
+    padding: 10px;
+}
+
+.input-field{
+    padding: 10px;
+}
+
+.add-product-button{
+    width: 10vw;
+    padding: 10px;
+    border: 3px solid var(--light);
+    border-radius: 12px;
+    color: var(--white);
+    background-color: var(--dark);
+}
+
+.add-product-button:hover{
+    background-color: var(--light);
+}
 
 
     /* TODO: Place appropriate @media and adjust them*/    
