--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -35,7 +35,7 @@
                 <h3 >Forgot password? <a href="#" class="forgot-password-link">resset password</a></h3>
 
                 <h3 class="sign-up">Don't have an account yet?
-                    <a th:href="@{/signUp}" class="sign-up-link">Sign Up</a>
+                    <a th:href="@{/auth/signUp}" class="sign-up-link">Sign Up</a>
                 </h3>
             </div>
 
