--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -35,7 +35,7 @@
             
             <div class="forgot-password-link-holder">
                 <h3 class="sign-up"> Have account already?
-                    <a th:href="@{/signIn}" class="sign-up-link"> Sign In</a>
+                    <a th:href="@{/auth/signIn}" class="sign-up-link"> Sign In</a>
                 </h3>
             </div>
 
