--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -15,7 +15,7 @@
     <div class="middlenav">
         <a th:href="@{/}"><img th:src="@{/icons/Bez nazwy-2.png}"></a>
         <div class="search">
-            <form action="/shop" method="GET">
+            <form th:action="@{/shop}" method="GET">
             <input class="searchbar" type="text" name="name" th:value="${name != null ? name : ''}" placeholder="Search">
             <button type="submit" id="icon" class="fa fa-search"></button>
             </form>
