--- a/src/main/resources/templates/fragments/product.html
+++ b/src/main/resources/templates/fragments/product.html
@@ -34,7 +34,7 @@
                 <div th:if="${product.isOwner}"><p>You are the Owner</p></div>
                 <div th:if="${product.inCart}"><p>Asset already in cart</p></div>
                 <div class="product-card-cart-button" th:if="${!product.isBought} and ${!product.isOwner} and ${!product.inCart}">
-                    <form th:action="@{cart/add}" method="POST">
+                    <form th:action="@{/cart/add}" method="POST">
                         <input type="hidden" name="_csrf" th:value="${_csrf.token}">
                         <input type="hidden" name="productId" th:value="${product.id}">
                     
