--- a/src/main/resources/templates/layouts/nav.html
+++ b/src/main/resources/templates/layouts/nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav th:fragment="nav">
     <div class="topnav">
         <div class="lefttop">
             <a><img th:src="@{/icons/new-instagram-logo-white-border-icon-png-large.png}"></a>
