--- a/src/main/resources/templates/layouts/nav.html
+++ b/src/main/resources/templates/layouts/nav.html
@@ -8,6 +8,7 @@
         </div>
         <div class="righttop">
             <a th:href="@{/contact}"><img th:src="@{/icons/iconmonstr-email-3-240.png}"></a>
+            <a href="">Notyfications</a>
             <a th:href="@{/cart}"><img th:src="@{/icons/cart.png}"></a>
             <a th:href="@{/account}"><img th:src="@{/icons/account.png}"></a>
         </div>
